[gd_scene load_steps=4 format=2]

[ext_resource path="res://scn_pause_menu.gd" type="Script" id=1]

[sub_resource type="InputEventKey" id=1]
scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="PauseMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 153.0
margin_top = 38.0
margin_right = 193.0
margin_bottom = 52.0
rect_scale = Vector2( 4, 4 )
text = "PONG"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 173.0
margin_top = 100.0
margin_right = 325.0
margin_bottom = 293.0
alignment = 1

[node name="5" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 152.0
margin_bottom = 58.0
text = "First to 5"

[node name="10" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 152.0
margin_bottom = 82.0
shortcut = SubResource( 2 )
text = "First to 10"

[node name="Custom" type="Button" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 152.0
margin_bottom = 106.0
text = "AI Easy"

[node name="Hard" type="Button" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 152.0
margin_bottom = 130.0
text = "AI Hard"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 152.0
margin_bottom = 154.0
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 150 )
current = true

[connection signal="pressed" from="VBoxContainer/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="VBoxContainer/10" to="." method="_on_10_pressed"]
[connection signal="pressed" from="VBoxContainer/Custom" to="." method="_on_Custom_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
